--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,5 +1,8 @@
 .header {
-  margin-bottom: 35px;
-  width: 100%;
-  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+    margin-bottom: 35px;
+    width: 100%;
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
